Implementación de autenticación y confirmación de correo

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ BD_NAME=bienesraices_node_mvc
 BD_USER=root
 BD_PASSWORD=admin
 BD_HOST=localhost
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=a9496d5d613435
+EMAIL_PASS=3f8c1330922b0b
+
+BACKEND_URL=http://localhost
